modifying notes for each instituions

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <title>Plains2Peaks Pilot</title>
+        <style>
+            body {
+                font-family: Courier, Arial, "sans serif";
+            }
+        </style>
     </head>
     <body>
         {% block main %}{% endblock %}
