--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,18 @@
     <h1>Plains2Peaks.org Pilot</h1>
     <h3>Participating Institutions</h3>
     <ul>
-        {% set total_instances = 0 %}
-        {% set total_items = 0 %}
         {% for page in pages %}
         <li>
             <a href="{{ url_for('page', name=page.path) }}">{{ page.meta.title }}</a> 
             <strong>Status:</strong> <em>{{ page.meta.status|title }}</em> 
             {% if page.meta.bf_instances %}<strong>Instances:</strong> {{ page.meta.bf_instances|pretty_num }}{% endif %}
             {% if page.meta.bf_items %}<strong>Items:</strong> {{ page.meta.bf_items|pretty_num }}{% endif %}
-            {% set total_instances = total_instances + page.meta.bf_instances|int %}
         </li>
         {% endfor %}
     </ul>
-    <h4>Total Items: {{ total|pretty_num }}</h4>
+    
+    <h4>Total Items: {{ total_items|pretty_num }}</h4>
+    <h4>Total Instances: {{ total_instances|pretty_num }}</h4>
+    
+
 {% endblock %}
