much work on project

--- a/templates/reports/index.html
+++ b/templates/reports/index.html
@@ -4,6 +4,7 @@
     <h1>Plains2Peaks.org Pilot</h1>
     <h2>Reports</h2>
     <ul>
+        <li><a href="{{ url_for('reporting', name='institution-count') }}">Institution Counts</a></li>
         <li><a href="{{ url_for('reporting', name='rights-statements') }}">Right Statements Breakdown</a></li>
     </ul>
 {% endblock %}
